[tool.poetry]
name = "pgsq"
version = "0.1.0"
description = ""
authors = ["Kamal Mustafa"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
peewee = "^3.14.8"
psycopg2 = "^2.9.2"
human-id = "^0.1.0"
Pebble = "^4.6.3"
logzero = "^1.7.0"

[tool.poetry.scripts]
pwq = 'pgsq:run'

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
